crates/ros-z/tests/ui/message_derive/generic_enum.rs
use ros_z::Message;
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, Serialize, Deserialize, Message)]
enum GenericEnum<T> {
    Value(T),
}

fn main() {}
